Convert hybrid automation framework to Java 8
Replace Java 11+ language/API usage with Java 8 equivalents, pin Java-8-compatible Selenium/TestNG/AspectJ versions, and run framework CI with Temurin 8 on the hybrid branch.