@@ -18,6 +18,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public final class HealingUiDriver implements UiDriver {
     private static final Logger LOGGER = LogManager.getLogger(HealingUiDriver.class);
@@ -173,7 +174,7 @@ public final class HealingUiDriver implements UiDriver {
         ordered.addAll(locator.fallbacks());
         return new ArrayList<>(ordered).stream()
                 .limit(FrameworkConfig.selfHealingMaximumCandidates())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void recordIfHealed(UiLocator locator, LocatorCandidate successful, String action) {
